# masseyhacks_xi

./: README.md  main.py  pyproject.toml  wsgi.py
masseyhacks_xi/: app.py  spotify.py
masseyhacks_xi/blueprints/: __init__.py  playlist_maker.py  poster.py  posters.py  references.py  selector.py
masseyhacks_xi/static/scripts/: download.js  selector.js
masseyhacks_xi/static/styles/: album_poster_style.css  home.css  selector.css  style.css
masseyhacks_xi/templates/: album_posters.html  base.html  home.html  playlist_maker.html  poster.html  selector.html  single_posters.html
