[project]
name = "masseyhacks-xi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
]

[dependency-groups]`
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.10",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-builtins
    "A",
    # flake8-type-checking
    "TC"
]